@@ -1,6 +1,6 @@
 """
 This module provides the Status class, which encapsulates
-a status code for Nagios.
+a status code for a Plugin.
 """
 
 class Status(object):
@@ -17,11 +17,25 @@ class Status(object):
         **Note**: In general, this should never be called since the standard
         statuses are exported from ``pynagios``.
         """
+
+        assert isinstance(exit_code, int)
+        assert isinstance(name, str)
+
         self.name = name
         self.exit_code = exit_code
 
     def __repr__(self):
         return "Status(name=%s, exit_code=%d)" % (repr(self.name), self.exit_code)
 
-    def __cmp__(self, other):
-        return cmp(self.exit_code,other.exit_code)
+    def __lt__(self, other):
+        return (self.exit_code < other.exit_code)
+
+    def __eq__(self, other):
+        return (self.exit_code == other.exit_code)
+
+    def __ne__(self, other):
+        return (self.exit_code != other.exit_code)
+
+    def __gt__(self, other):
+        return (self.exit_code > other.exit_code)
+
