@@ -1,2 +1,4 @@
 pytest==2.1.0
 sphinx
+tox
+six
