@@ -1,0 +1,8 @@
+[tox]
+envlist = py34,py27
+[testenv]
+deps=
+  pytest
+  six
+commands=
+  py.test
